--- a/index.html
+++ b/index.html
@@ -66,22 +66,22 @@
                     </a>
                 </li>
                 <li class="nav-item ">
-                    <a class="nav-link" href="/services">
+                    <a class="nav-link" href="/services.html">
                         Services
                     </a>
                 </li>
                 <li class="nav-item ">
-                    <a class="nav-link" href="/api">
+                    <a class="nav-link" href="/api.html">
                         API
                     </a>
                 </li>
                 <li class="nav-item ">
-                    <a class="nav-link" href="/signup">
+                    <a class="nav-link" href="/signup.html">
                         Sign up
                     </a>
                 </li>
                 <li class="nav-item ">
-                    <a class="nav-link" href="/blog">
+                    <a class="nav-link" href="/blog.html">
                         Blog
                     </a>
                 </li>
@@ -123,36 +123,7 @@
                     </div>
                 </div>
             </div>
-        </section>
-        <section class="marqueeSec">
-            <marquee behavior="alternate" direction="left" loop="" scrollamount="1">
-                <h3>
-                    <img src="https://cdn.mypanel.link/43qlom/e33x4agh2q39okez.png">
-                    <i class="fas fa-asterisk"></i>
-                    <img src="https://cdn.mypanel.link/43qlom/e33x4agh2q39okez.png">
-                    <i class="fas fa-asterisk"></i>
-                    <img src="https://cdn.mypanel.link/43qlom/e33x4agh2q39okez.png">
-                    <i class="fas fa-asterisk"></i>
-                    <img src="https://cdn.mypanel.link/43qlom/e33x4agh2q39okez.png">
-                    <i class="fas fa-asterisk"></i>
-                    <img src="https://cdn.mypanel.link/43qlom/e33x4agh2q39okez.png">
-                    <i class="fas fa-asterisk"></i>
-                    <img src="https://cdn.mypanel.link/43qlom/e33x4agh2q39okez.png">
-                    <i class="fas fa-asterisk"></i>
-                    <img src="https://cdn.mypanel.link/43qlom/e33x4agh2q39okez.png">
-                    <i class="fas fa-asterisk"></i>
-                    <img src="https://cdn.mypanel.link/43qlom/e33x4agh2q39okez.png">
-                    <i class="fas fa-asterisk"></i>
-                    <img src="https://cdn.mypanel.link/43qlom/e33x4agh2q39okez.png">
-                    <i class="fas fa-asterisk"></i>
-                    <img src="https://cdn.mypanel.link/43qlom/e33x4agh2q39okez.png">
-                    <i class="fas fa-asterisk"></i>
-                    <img src="https://cdn.mypanel.link/43qlom/e33x4agh2q39okez.png">
-                    <i class="fas fa-asterisk"></i>
-                    <img src="https://cdn.mypanel.link/43qlom/e33x4agh2q39okez.png">
-                </h3>
-            </marquee>
-        </section>
+        </section>.html
     </main>
     <footer class="footer">
         <div class="footer-container">
