--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     </div>
                 </div>
             </div>
-        </section>.html
+        </section>
     </main>
     <footer class="footer">
         <div class="footer-container">
