--- a/index.html
+++ b/index.html
@@ -61,27 +61,27 @@
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                 <li class="nav-item  active ">
-                    <a class="nav-link" href="/">
+                    <a class="nav-link" href="./">
                         Sign in
                     </a>
                 </li>
                 <li class="nav-item ">
-                    <a class="nav-link" href="/services.html">
+                    <a class="nav-link" href="./services.html">
                         Services
                     </a>
                 </li>
                 <li class="nav-item ">
-                    <a class="nav-link" href="/api.html">
+                    <a class="nav-link" href="./api.html">
                         API
                     </a>
                 </li>
                 <li class="nav-item ">
-                    <a class="nav-link" href="/signup.html">
+                    <a class="nav-link" href="./signup.html">
                         Sign up
                     </a>
                 </li>
                 <li class="nav-item ">
-                    <a class="nav-link" href="/blog.html">
+                    <a class="nav-link" href="./blog.html">
                         Blog
                     </a>
                 </li>
