--- a/child-panel.html
+++ b/child-panel.html
@@ -32,55 +32,55 @@
         </div>
         <ul class="sidebarul">
             <li class="nav-item ">
-                <a class="nav-link" href="/">
+                <a class="nav-link" href="./">
                     <i class="navbar-icon fas fa-cart-plus"></i>
                     New order
                 </a>
             </li>
             <li class="nav-item ">
-                <a class="nav-link" href="/services.html">
+                <a class="nav-link" href="./services.html">
                     <i class="navbar-icon fas fa-clipboard"></i>
                     Services
                 </a>
             </li>
             <li class="nav-item ">
-                <a class="nav-link" href="/orders.html">
+                <a class="nav-link" href="./orders.html">
                     <i class="navbar-icon fas fa-book"></i>
                     Orders History
                 </a>
             </li>
             <li class="nav-item ">
-                <a class="nav-link" href="/addfunds.html">
+                <a class="nav-link" href="./addfunds.html">
                     <i class="navbar-icon fas fa-wallet"></i>
                     Add funds
                 </a>
             </li>
             <li class="nav-item ">
-                <a class="nav-link" href="/api.html">
+                <a class="nav-link" href="./api.html">
                     <i class="navbar-icon fas fa-link"></i>
                     API
                 </a>
             </li>
             <li class="nav-item active">
-                <a class="nav-link" href="/child-panel.html">
+                <a class="nav-link" href="./child-panel.html">
                     <i class="navbar-icon fas fa-project-diagram"></i>
                     Child panel
                 </a>
             </li>
             <li class="nav-item ">
-                <a class="nav-link" href="/tickets.html">
+                <a class="nav-link" href="./tickets.html">
                     <i class="navbar-icon fas fa-ticket-alt"></i>
                     Help
                 </a>
             </li>
             <li class="nav-item ">
-                <a class="nav-link" href="/massorder.html">
+                <a class="nav-link" href="./massorder.html">
                     <i class="navbar-icon fas fa-swatchbook"></i>
                     Mass order
                 </a>
             </li>
             <li class="nav-item ">
-                <a class="nav-link" href="/updates.html">
+                <a class="nav-link" href="./updates.html">
                     <i class="navbar-icon fas fa-burn"></i>
                     Updates
                 </a>
@@ -92,11 +92,11 @@
                 <p>asifkk</p>
                 <small><b>$1.91569</b></small>
             </div>
-            <a href="/account"><i class="fas fa-cog"></i></a>
+            <a href="./account.html"><i class="fas fa-cog"></i></a>
         </div>
     </div>
     <nav class="navbar">
-        <a href="/" class="navbar-brand">
+        <a href="./" class="navbar-brand">
             <img src="https://cdn.mypanel.link/43qlom/e33x4agh2q39okez.png" alt="gosmm.in Future Of Your Social Profile"
                 title="GoSMM Landing Page">
         </a>
@@ -107,10 +107,10 @@
                 <img src="https://cdn.mypanel.link/mojze1/pbry2q80f3rne0bj.png">
             </button>
             <ul class="dropdown-menu sho\w" data-bs-popper="static">
-                <li><a class="dropdown-item" href="/account.html"><i class="fas fa-user-alt"></i> Accounts</a></li>
-                <li><a class="dropdown-item" href="/addfunds.html"><i class="fas fa-wallet"></i> Add funds</a></li>
-                <li><a class="dropdown-item" href="/tickets.html"><i class="fas fa-life-ring"></i> Support</a></li>
-                <li><a class="dropdown-item" href="/logout.html"><i class="fas fa-sign-out-alt"></i> Logout</a></li>
+                <li><a class="dropdown-item" href="./account.html"><i class="fas fa-user-alt"></i> Accounts</a></li>
+                <li><a class="dropdown-item" href="./addfunds.html"><i class="fas fa-wallet"></i> Add funds</a></li>
+                <li><a class="dropdown-item" href="./tickets.html"><i class="fas fa-life-ring"></i> Support</a></li>
+                <li><a class="dropdown-item" href="./logout.html"><i class="fas fa-sign-out-alt"></i> Logout</a></li>
             </ul>
         </div>
 
@@ -373,25 +373,25 @@
             <div class="footer-col footer-links-col">
                 <h3>Quick Links</h3>
                 <p>
-                    <a href="/" class="footer-link">Home</a>
+                    <a href="./" class="footer-link">Home</a>
                 </p>
                 <p>
-                    <a href="/signup.html" class="footer-link">Sign up</a>
+                    <a href="./signup.html" class="footer-link">Sign up</a>
                 </p>
                 <p>
-                    <a href="/services.html" class="footer-link">Services</a>
+                    <a href="./services.html" class="footer-link">Services</a>
                 </p>
                 <p>
-                    <a href="/blog.html" class="footer-link">Blog</a>
+                    <a href="./blog.html" class="footer-link">Blog</a>
                 </p>
             </div>
             <div class="footer-col footer-links-col">
                 <h3>Resources</h3>
                 <p>
-                    <a href="/#faqSec" class="footer-link">FAQs</a>
+                    <a href="./#faqSec" class="footer-link">FAQs</a>
                 </p>
                 <p>
-                    <a href="/api.html" class="footer-link">API</a>
+                    <a href="./api.html" class="footer-link">API</a>
                 </p>
             </div>
             <div class="footer-col footer-links-col">
@@ -414,7 +414,7 @@
             </div>
             <div class="footer-end">
                 <span>&copy; 2024
-                    <a href="/" style="text-decoration: none;">GoSMM</a>
+                    <a href="./" style="text-decoration: none;">GoSMM</a>
                     All rights reserved.
                 </span>
             </div>
@@ -425,35 +425,35 @@
             <div class="row">
                 <!-- Option 1 -->
                 <div class="col">
-                    <a href="/" class="text-decoration-none text-muted">
+                    <a href="./" class="text-decoration-none text-muted">
                         <i class="fas fa-box"></i>
                         <p class="mb-0 small">Order</p>
                     </a>
                 </div>
                 <!-- Option 2 -->
                 <div class="col">
-                    <a href="/addfunds.html" class="text-decoration-none text-muted">
+                    <a href="./addfunds.html" class="text-decoration-none text-muted">
                         <i class="fas fa-wallet"></i>
                         <p class="mb-0 small">Wallet</p>
                     </a>
                 </div>
                 <!-- Option 3 -->
                 <div class="col">
-                    <a href="/orders.html" class="text-decoration-none text-muted">
+                    <a href="./orders.html" class="text-decoration-none text-muted">
                         <i class="fas fa-redo-alt"></i>
                         <p class="mb-0 small">Orders</p>
                     </a>
                 </div>
                 <!-- Option 4 -->
                 <div class="col">
-                    <a href="/tickets.html" class="text-decoration-none text-muted">
+                    <a href="./tickets.html" class="text-decoration-none text-muted">
                         <i class="fas fa-comments"></i>
                         <p class="mb-0 small">Support</p>
                     </a>
                 </div>
                 <!-- Option 5 -->
                 <div class="col">
-                    <a href="/account.html" class="text-decoration-none text-muted">
+                    <a href="./account.html" class="text-decoration-none text-muted">
                         <i class="fas fa-user"></i>
                         <p class="mb-0 small">Profile</p>
                     </a>
