--- a/signup.html
+++ b/signup.html
@@ -36,7 +36,7 @@
 </head>
 <body>
     <nav class="navbar">
-        <a href="/" class="navbar-brand">
+        <a href="./" class="navbar-brand">
             <img src="https://cdn.mypanel.link/43qlom/e33x4agh2q39okez.png" alt="gosmm.in Future Of Your Social Profile"
                 title="GoSMM Landing Page">
         </a>
@@ -50,27 +50,27 @@
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="navbar-nav ">
                 <li class="nav-item ">
-                    <a class="nav-link" href="/">
+                    <a class="nav-link" href="./">
                         Sign in
                     </a>
                 </li>
                 <li class="nav-item ">
-                    <a class="nav-link" href="/services.html">
+                    <a class="nav-link" href="./services.html">
                         Services
                     </a>
                 </li>
                 <li class="nav-item ">
-                    <a class="nav-link" href="/api.html">
+                    <a class="nav-link" href="./api.html">
                         API
                     </a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" href="/signup.html">
+                    <a class="nav-link" href="./signup.html">
                         Sign up
                     </a>
                 </li>
                 <li class="nav-item ">
-                    <a class="nav-link" href="/blog.html">
+                    <a class="nav-link" href="./blog.html">
                         Blog
                     </a>
                 </li>
@@ -161,25 +161,25 @@
             <div class="footer-col footer-links-col">
                 <h3>Quick Links</h3>
                 <p>
-                    <a href="/" class="footer-link">Home</a>
+                    <a href="./" class="footer-link">Home</a>
                 </p>
                 <p>
-                    <a href="/signup.html" class="footer-link">Sign up</a>
+                    <a href="./signup.html" class="footer-link">Sign up</a>
                 </p>
                 <p>
-                    <a href="/services.html" class="footer-link">Services</a>
+                    <a href="./services.html" class="footer-link">Services</a>
                 </p>
                 <p>
-                    <a href="/blog.html" class="footer-link">Blog</a>
+                    <a href="./blog.html" class="footer-link">Blog</a>
                 </p>
             </div>
             <div class="footer-col footer-links-col">
                 <h3>Resources</h3>
                 <p>
-                    <a href="/#faqSec" class="footer-link">FAQs</a>
+                    <a href="./#faqSec" class="footer-link">FAQs</a>
                 </p>
                 <p>
-                    <a href="/api.html" class="footer-link">API</a>
+                    <a href="./api.html" class="footer-link">API</a>
                 </p>
             </div>
             <div class="footer-col footer-links-col">
@@ -202,7 +202,7 @@
             </div>
             <div class="footer-end">
                 <span>&copy; 2024
-                    <a href="/" style="text-decoration: none;">GoSMM</a>
+                    <a href="./" style="text-decoration: none;">GoSMM</a>
                     All rights reserved.
                 </span>
             </div>
