--- a/child-panel.html
+++ b/child-panel.html
@@ -87,7 +87,7 @@
             </li>
         </ul>
         <div class="profilesb">
-            <img src="https://cdn.mypanel.link/mojze1/pbry2q80f3rne0bj.png">
+            <img src="https://cdn.mypanel.link/43qlom/36ayc0fgmdzg8nfg.webp">
             <div>
                 <p>asifkk</p>
                 <small><b>$1.91569</b></small>
@@ -104,7 +104,7 @@
         <div class="dropdown profdd">
             <button class="btn btn-secondary dropdown-toggle show" type="button" data-bs-toggle="dropdown"
                 aria-expanded="true">
-                <img src="https://cdn.mypanel.link/mojze1/pbry2q80f3rne0bj.png">
+                <img src="https://cdn.mypanel.link/43qlom/36ayc0fgmdzg8nfg.webp">
             </button>
             <ul class="dropdown-menu sho\w" data-bs-popper="static">
                 <li><a class="dropdown-item" href="./account.html"><i class="fas fa-user-alt"></i> Accounts</a></li>
