--- a/updates.html
+++ b/updates.html
@@ -124,42 +124,6 @@
             overflow: auto;
         }
 
-        ul.pagination {
-            display: flex;
-            padding-left: 0;
-            list-style: none;
-            margin-top: -8px;
-        }
-
-        .active>.page-link {
-            z-index: 3;
-            color: white;
-            background: var(--primary-color);
-            border-color: var(--primary-color);
-        }
-
-        .page-link {
-            position: relative;
-            display: block;
-            padding: 6px 12px;
-            font-size: 16px;
-            color: var(--primary-color);
-            text-decoration: none;
-            background-color: #fff;
-            border: 1px solid #dee2e6;
-            transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
-            border-radius: inherit;
-        }
-
-
-        .page-item:first-child .page-link {
-            border-radius: 6px 0 0 6px !important;
-        }
-
-        .page-item:last-child .page-link {
-            border-radius: 0 6px 6px 0 !important;
-        }
-
         @media (min-width: 992px) {
             .service-name {
                 max-width: 320px;
@@ -233,7 +197,7 @@
             </li>
         </ul>
         <div class="profilesb">
-            <img src="https://cdn.mypanel.link/mojze1/pbry2q80f3rne0bj.png">
+            <img src="https://cdn.mypanel.link/43qlom/36ayc0fgmdzg8nfg.webp">
             <div>
                 <p>asifkk</p>
                 <small><b>$1.91569</b></small>
@@ -250,7 +214,7 @@
         <div class="dropdown profdd">
             <button class="btn btn-secondary dropdown-toggle show" type="button" data-bs-toggle="dropdown"
                 aria-expanded="true">
-                <img src="https://cdn.mypanel.link/mojze1/pbry2q80f3rne0bj.png">
+                <img src="https://cdn.mypanel.link/43qlom/36ayc0fgmdzg8nfg.webp">
             </button>
             <ul class="dropdown-menu" data-bs-popper="static">
                 <li><a class="dropdown-item" href="./account.html"><i class="fas fa-user-alt"></i> Accounts</a></li>
