--- a/api.html
+++ b/api.html
@@ -39,22 +39,40 @@
         }
 
         .card {
+            padding: 0;
             overflow: hidden;
         }
 
         .card-header {
+            margin-bottom: 0;
             background: var(--primary-color);
             color: white;
             font-size: calc(1.275rem + 0.3vw);
         }
 
-        .card-header + .table {
+        .card-header+.table {
             margin-bottom: 16px;
         }
 
         .example-code {
             padding: 16px;
         }
+
+        .example-code strong {
+            display: block;
+            margin-bottom: 5px;
+            font-weight: 600;
+        }
+
+        .example-code pre {
+            background: #000;
+            color: white;
+            padding: 20px;
+            border-radius: 15px;
+            font-family: monospace;
+        }
+
+
     </style>
 </head>
 
@@ -212,8 +230,8 @@
                         <a class="nav-link" href="#User balance">User balance</a>
                     </li>
                 </ul>
-                <div class="card" style="padding: 0;">
-                    <div class="card-header" style="margin-bottom: 0;">
+                <div class="card">
+                    <div class="card-header">
                         <h4>Service list</h4>
                     </div>
                     <table class="table">
@@ -236,9 +254,104 @@
                     </table>
                     <div class="example-code">
                         <strong>Example response</strong>
-
+<pre>[
+    {
+        "service": 1,
+        "name": "Followers",
+        "type": "Default",
+        "category": "First Category",
+        "rate": "0.90",
+        "min": "50",
+        "max": "10000",
+        "refill": true,
+        "cancel": true
+    },
+    {
+        "service": 2,
+        "name": "Comments",
+        "type": "Custom Comments",
+        "category": "Second Category",
+        "rate": "8",
+        "min": "10",
+        "max": "1500",
+        "refill": false,
+        "cancel": true
+    }
+]
+</pre>
                     </div>
                 </div>
+                <div class="card">
+                    <div class="card-header">
+                        <h4>Create refill</h4>
+                    </div>
+                    <table class="table">
+                        <thead class="table-header">
+                            <tr>
+                                <td>Parameters</td>
+                                <td>Description</td>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>key</td>
+                                <td>Your API key</td>
+                            </tr>
+                            <tr>
+                                <td>action</td>
+                                <td>refill</td>
+                            </tr>
+                            <tr>
+                                <td>order</td>
+                                <td>Order ID</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                    <div class="example-code">
+                        <strong>Example response</strong>
+<pre>{
+    "refill": "1"
+}</pre>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-header">
+                        <h4>Order status</h4>
+                    </div>
+                    <table class="table">
+                        <thead class="table-header">
+                            <tr>
+                                <td>Parameters</td>
+                                <td>Description</td>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>key</td>
+                                <td>Your API key</td>
+                            </tr>
+                            <tr>
+                                <td>action</td>
+                                <td>status</td>
+                            </tr>
+                            <tr>
+                                <td>order</td>
+                                <td>Order ID</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                    <div class="example-code">
+                        <strong>Example response</strong>
+<pre>{
+    "charge": "0.27819",
+    "start_count": "3572",
+    "status": "Partial",
+    "remains": "157",
+    "currency": "USD"
+}</pre>
+                    </div>
+                </div>
+                <a href="./example.txt" target="_blank" style="text-decoration: none; display: inline-block;" class="btn-primary">Example of PHP code</a>
             </section>
         </div>
     </main>
