--- a/updates.html
+++ b/updates.html
@@ -51,10 +51,13 @@
             text-align: center;
             display: flex;
             flex-direction: column;
+            align-self: stretch;
         }
 
         .nav-pills li:first-child button {
+            height: 100%;
             width: 100%;
+            white-space: nowrap;
             flex-grow: 1;
             flex-shrink: 0;
         }
@@ -64,6 +67,7 @@
         }
 
         .dropdown {
+            height: 100%;
             position: relative;
         }
 
@@ -240,7 +244,7 @@
                         <b>Updates</b>
                     </div>
                     <ul class="nav-pills"
-                        style="margin-bottom: 0;padding: 14px;list-style: none; display: flex; gap: 10px;">
+                        style="margin-bottom: 0;padding: 14px;list-style: none; display: flex; gap: 10px;flex-wrap: wrap;">
                         <li class="nav-item">
                             <div class="dropdown">
                                 <button class="btn-primary dropdown-toggle" type="button" data-target="dropdown2"
