--- a/child-panel.html
+++ b/child-panel.html
@@ -32,7 +32,7 @@
         </div>
         <ul class="sidebarul">
             <li class="nav-item ">
-                <a class="nav-link" href="./">
+                <a class="nav-link" href="./buy.html">
                     <i class="navbar-icon fas fa-cart-plus"></i>
                     New order
                 </a>
