--- a/index.html
+++ b/index.html
@@ -124,6 +124,35 @@
                 </div>
             </div>
         </section>
+        <section class="marqueeSec">
+            <marquee behavior="alternate" direction="left" loop="" scrollamount="1">
+                <h3>
+                    <img src="https://cdn.mypanel.link/43qlom/e33x4agh2q39okez.png">
+                    <i class="fas fa-asterisk"></i>
+                    <img src="https://cdn.mypanel.link/43qlom/e33x4agh2q39okez.png">
+                    <i class="fas fa-asterisk"></i>
+                    <img src="https://cdn.mypanel.link/43qlom/e33x4agh2q39okez.png">
+                    <i class="fas fa-asterisk"></i>
+                    <img src="https://cdn.mypanel.link/43qlom/e33x4agh2q39okez.png">
+                    <i class="fas fa-asterisk"></i>
+                    <img src="https://cdn.mypanel.link/43qlom/e33x4agh2q39okez.png">
+                    <i class="fas fa-asterisk"></i>
+                    <img src="https://cdn.mypanel.link/43qlom/e33x4agh2q39okez.png">
+                    <i class="fas fa-asterisk"></i>
+                    <img src="https://cdn.mypanel.link/43qlom/e33x4agh2q39okez.png">
+                    <i class="fas fa-asterisk"></i>
+                    <img src="https://cdn.mypanel.link/43qlom/e33x4agh2q39okez.png">
+                    <i class="fas fa-asterisk"></i>
+                    <img src="https://cdn.mypanel.link/43qlom/e33x4agh2q39okez.png">
+                    <i class="fas fa-asterisk"></i>
+                    <img src="https://cdn.mypanel.link/43qlom/e33x4agh2q39okez.png">
+                    <i class="fas fa-asterisk"></i>
+                    <img src="https://cdn.mypanel.link/43qlom/e33x4agh2q39okez.png">
+                    <i class="fas fa-asterisk"></i>
+                    <img src="https://cdn.mypanel.link/43qlom/e33x4agh2q39okez.png">
+                </h3>
+            </marquee>
+        </section>
     </main>
     <footer class="footer">
         <div class="footer-container">
