--- a/updates.html
+++ b/updates.html
@@ -141,8 +141,8 @@
 <body>
     <div class="sidebar">
         <div class="sidebarhead">
-            <button class="headbtn currenbtn">Currency</button>
-            <button class="headbtn langbtn">Language</button>
+            <button class="headbtn currenbtn" onclick="openModal('#changeCurrency')">Currency</button>
+            <button class="headbtn langbtn" onclick="openModal('#changeLanguage')">Language</button>
         </div>
         <ul class="sidebarul">
             <li class="nav-item ">
@@ -1001,6 +1001,179 @@
             </section>
         </div>
     </main>
+    <div class="modal-container " id="changeCurrency">
+        <div class="modal modal-change-currency">
+            <div class="modal-header">
+                <h2 class="modal-title">Change your currency</h2>
+                <button class="btn-close">
+                    <img src="./assets/images/close.svg" alt="Close modal" width="15">
+                </button>
+            </div>
+            <div class="modal-body">
+                <ul class="currencies-list">
+                    <li>
+                        <a href="#" class="currencies-item" data-rate-key="USD" data-rate-symbol="$"><span>$</span>
+                            USD</a>
+                    </li>
+                    <li>
+                        <a href="#" class="currencies-item" data-rate-key="AED" data-rate-symbol="د.إ"><span>د.إ</span>
+                            AED</a>
+                    </li>
+                    <li>
+                        <a href="#" class="currencies-item" data-rate-key="BDT" data-rate-symbol="৳"><span>৳</span>
+                            BDT</a>
+                    </li>
+                    <li>
+                        <a href="#" class="currencies-item" data-rate-key="EUR" data-rate-symbol="€"><span>€</span>
+                            EUR</a>
+                    </li>
+                    <li>
+                        <a href="#" class="currencies-item" data-rate-key="GBP" data-rate-symbol="£"><span>£</span>
+                            GBP</a>
+                    </li>
+                    <li>
+                        <a href="#" class="currencies-item" data-rate-key="PKR" data-rate-symbol="Rs"><span>Rs</span>
+                            PKR</a>
+                    </li>
+                    <li>
+                        <a href="#" class="currencies-item" data-rate-key="RUB" data-rate-symbol="₽"><span>₽</span>
+                            RUB</a>
+                    </li>
+                    <li>
+                        <a href="#" class="currencies-item" data-rate-key="TRY" data-rate-symbol="₺"><span>₺</span>
+                            TRY</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="modal-footer">
+                <button class="btn-primary">Save changes</button>
+            </div>
+        </div>    
+    </div>
+    <div class="modal-container " id="changeLanguage">
+        <div class="modal modal-change-lang">
+            <div class="modal-header">
+                <h2 class="modal-title">Change your language</h2>
+                <button class="btn-close">
+                    <img src="./assets/images/close.svg" alt="Close modal" width="15">
+                </button>
+            </div>
+            <div class="modal-body">
+                <select class="form-input" aria-label="Language Translate Widget" style="background: #f5eaff;">
+                    <option value="">Select Language</option>
+                    <option value="af">Afrikaans</option>
+                    <option value="sq">Albanian</option>
+                    <option value="am">Amharic</option>
+                    <option value="ar">Arabic</option>
+                    <option value="hy">Armenian</option>
+                    <option value="az">Azerbaijani</option>
+                    <option value="eu">Basque</option>
+                    <option value="be">Belarusian</option>
+                    <option value="bn">Bengali</option>
+                    <option value="bs">Bosnian</option>
+                    <option value="bg">Bulgarian</option>
+                    <option value="ca">Catalan</option>
+                    <option value="ceb">Cebuano</option>
+                    <option value="ny">Chichewa</option>
+                    <option value="zh-CN">Chinese (Simplified)</option>
+                    <option value="zh-TW">Chinese (Traditional)</option>
+                    <option value="co">Corsican</option>
+                    <option value="hr">Croatian</option>
+                    <option value="cs">Czech</option>
+                    <option value="da">Danish</option>
+                    <option value="nl">Dutch</option>
+                    <option value="eo">Esperanto</option>
+                    <option value="et">Estonian</option>
+                    <option value="tl">Filipino</option>
+                    <option value="fi">Finnish</option>
+                    <option value="fr">French</option>
+                    <option value="fy">Frisian</option>
+                    <option value="gl">Galician</option>
+                    <option value="ka">Georgian</option>
+                    <option value="de">German</option>
+                    <option value="el">Greek</option>
+                    <option value="gu">Gujarati</option>
+                    <option value="ht">Haitian Creole</option>
+                    <option value="ha">Hausa</option>
+                    <option value="haw">Hawaiian</option>
+                    <option value="iw">Hebrew</option>
+                    <option value="hi">Hindi</option>
+                    <option value="hmn">Hmong</option>
+                    <option value="hu">Hungarian</option>
+                    <option value="is">Icelandic</option>
+                    <option value="ig">Igbo</option>
+                    <option value="id">Indonesian</option>
+                    <option value="ga">Irish Gaelic</option>
+                    <option value="it">Italian</option>
+                    <option value="ja">Japanese</option>
+                    <option value="jw">Javanese</option>
+                    <option value="kn">Kannada</option>
+                    <option value="kk">Kazakh</option>
+                    <option value="km">Khmer</option>
+                    <option value="rw">Kinyarwanda</option>
+                    <option value="ko">Korean</option>
+                    <option value="ky">Kyrgyz</option>
+                    <option value="lo">Lao</option>
+                    <option value="la">Latin</option>
+                    <option value="lv">Latvian</option>
+                    <option value="lt">Lithuanian</option>
+                    <option value="lb">Luxembourgish</option>
+                    <option value="mk">Macedonian</option>
+                    <option value="mg">Malagasy</option>
+                    <option value="ms">Malay</option>
+                    <option value="ml">Malayalam</option>
+                    <option value="mt">Maltese</option>
+                    <option value="mi">Maori</option>
+                    <option value="mr">Marathi</option>
+                    <option value="mn">Mongolian</option>
+                    <option value="my">Myanmar (Burmese)</option>
+                    <option value="ne">Nepali</option>
+                    <option value="no">Norwegian</option>
+                    <option value="or">Odia (Oriya)</option>
+                    <option value="pap">Papiamento</option>
+                    <option value="ps">Pashto</option>
+                    <option value="fa">Persian</option>
+                    <option value="pl">Polish</option>
+                    <option value="pt">Portuguese (Brazil)</option>
+                    <option value="pa">Punjabi (Gurmukhi)</option>
+                    <option value="ro">Romanian</option>
+                    <option value="ru">Russian</option>
+                    <option value="sm">Samoan</option>
+                    <option value="gd">Scots Gaelic</option>
+                    <option value="sr">Serbian</option>
+                    <option value="sn">Shona</option>
+                    <option value="si">Sinhala</option>
+                    <option value="sk">Slovak</option>
+                    <option value="sl">Slovenian</option>
+                    <option value="so">Somali</option>
+                    <option value="es">Spanish</option>
+                    <option value="su">Sundanese</option>
+                    <option value="sw">Swahili</option>
+                    <option value="sv">Swedish</option>
+                    <option value="ty">Tahitian</option>
+                    <option value="tg">Tajik</option>
+                    <option value="ta">Tamil</option>
+                    <option value="tt">Tatar</option>
+                    <option value="te">Telugu</option>
+                    <option value="th">Thai</option>
+                    <option value="tr">Turkish</option>
+                    <option value="uk">Ukrainian</option>
+                    <option value="ur">Urdu</option>
+                    <option value="ug">Uyghur</option>
+                    <option value="uz">Uzbek</option>
+                    <option value="vi">Vietnamese</option>
+                    <option value="cy">Welsh</option>
+                    <option value="xh">Xhosa</option>
+                    <option value="yi">Yiddish</option>
+                    <option value="yo">Yoruba</option>
+                    <option value="zu">Zulu</option>
+                </select>
+            </div>
+            <div class="modal-footer">
+                <button class="btn-primary">Save changes</button>
+            </div>
+        </div>
+    </div>
     <footer class="footer">
         <div class="footer-container">
             <div class="footer-col footer-brand">
